# paverutils

./: .gitignore  .hgtags  README.rst  announce.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: check.yaml  python-publish.yaml
sphinxcontrib/: paverutils.py
