[metadata]
name = sphinxcontrib-paverutils
author = Doug Hellmann
author-email = doug@doughellmann.com
summary = Sphinx/Paver integration
description-file = README.rst
license = BSD
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Topic :: Documentation
    Topic :: Utilities
keywords =
    sphinx documentation
home-page = https://bitbucket.org/dhellmann/sphinxcontrib-paverutils/
zip_safe = False

[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib

[global]
zip_safe = False
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[aliases]
release = egg_info -RDb ''

[wheel]
universal = true
